tests/ui/parser/macro/issue-33569.stderr
error: expected identifier, found `+`
  --> $DIR/issue-33569.rs:2:8
   |
LL |     { $+ } => {
   |        ^

error: expected one of: `*`, `+`, or `?`
  --> $DIR/issue-33569.rs:5:13
   |
LL |         $(x)(y)
   |             ^^^

error: missing fragment specifier
  --> $DIR/issue-33569.rs:2:8
   |
LL |     { $+ } => {
   |        ^
   |
   = note: fragment specifiers must be provided
   = help: valid fragment specifiers are `ident`, `block`, `stmt`, `expr`, `pat`, `ty`, `lifetime`, `literal`, `path`, `meta`, `tt`, `item` and `vis`, along with `expr_2021` and `pat_param` for edition compatibility
help: try adding a specifier here
   |
LL |     { $+:spec } => {
   |         +++++

error: missing fragment specifier
  --> $DIR/issue-33569.rs:2:8
   |
LL |     { $+ } => {
   |        ^

error: aborting due to 4 previous errors

